--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     margin: 0;
+    background-image: url('./assets/background.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
@@ -41,4 +44,5 @@ body {
     align-items: center;
     font-family: sans-serif;
     font-size: 2em;
+    transition: all 0.2s;
 }
